force-app/main/default/objects/HttpConfig__mdt/HttpConfig__mdt.object-meta.xml
<CustomObject>
    <description>Http Configuration used by Salesforce to query off platform APIs.</description>
    <label>Http Config</label>
    <pluralLabel>Http Configs</pluralLabel>
</CustomObject>