force-app/main/default/objects/HttpConfig__mdt/fields/ClientCertificateName__c.field-meta.xml
<CustomField>
    <fullName>ClientCertificateName__c</fullName>
    <description>The Client Certificate Developer Name required by this API.</description>
    <label>Client Certificate Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>