force-app/main/default/objects/HttpConfig__mdt/fields/IsCompressed__c.field-meta.xml
<CustomField>
    <fullName>IsCompressed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the data in the body is delivered to the endpoint in the gzip compressed format. If false, no compression format is used.</description>
    <inlineHelpText>If true, the data in the body is delivered to the endpoint in the gzip compressed format. If false, no compression format is used.</inlineHelpText>
    <label>Is Compressed</label>
    <type>Checkbox</type>
</CustomField>