force-app/main/default/objects/HttpConfig__mdt/fields/IsIgnoreNulls__c.field-meta.xml
<CustomField>
    <fullName>IsIgnoreNulls__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, remove null values before serializing the JSON Payloads.</description>
    <inlineHelpText>If true, remove null values before serializing the JSON Payloads.</inlineHelpText>
    <label>Is Ignore Nulls?</label>
    <type>Checkbox</type>
</CustomField>