force-app/main/default/objects/HttpConfig__mdt/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>The Developer Name of the Parent HttpConfig__mdt.</description>
    <inlineHelpText>The Developer Name of the Parent HttpConfig__mdt.</inlineHelpText>
    <label>Parent</label>
    <length>80</length>
    <type>Text</type>
</CustomField>