force-app/main/default/objects/HttpConfig__mdt/fields/TimeoutLimit__c.field-meta.xml
<CustomField>
    <fullName>TimeoutLimit__c</fullName>
    <defaultValue>1000 * 5</defaultValue>
    <description>How long to wait for a response before giving up in milliseconds. Must be between 1 and 120000ms.</description>
    <inlineHelpText>How long to wait for a response before giving up in milliseconds. Must be between 1 and 120000ms.</inlineHelpText>
    <label>Timeout Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>