force-app/main/default/objects/HttpConfig__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Parent__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>